# multidyndnscli

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTORS.md  README.adoc  README.md  config.example.yaml  config.yaml.example  config.yaml.template  genindex.html  index.html  installation.html  multi-dyndns-cli.py  multidyndnscli-test.py  mypy.ini  objects.inv  openwrt-dyndns-cli.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  update.py  usage.html
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/multidyndnscli/: index.doctree
.github/workflows/: build-docs.yml  build-test-package.yml  docs.yml  release.yml  test.yml
_sources/: index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/multidyndnscli/: index.rst.txt
autoapi/: index.html
autoapi/multidyndnscli/: index.html
autoapi/multidyndnscli/cli/: index.html
autoapi/multidyndnscli/nc_dnsapi/: index.html
autoapi/multidyndnscli/schemata/: index.html
contrib/: debug_test.py  interfaces.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  usage.rst
multidyndnscli/: __init__.py  cli.py  schemata.py  util.py
openwrtdyndnscli/: __init__.py  schemata.py  util.py
tests/: __init__.py  test_cli.py  test_openwrtdyndnscli.py  test_schema_validation.py  test_util.py
tests/test_files/: test-config-fritzbox.yaml  test-config-wan.yaml  test-config-web.yaml
(+9 files in other folders)
