[tool.poetry]
name = "openwrtdyndnscli"
version = "0.1.0"
description = "DynDNS Command-line Client for OpenWRT"
authors = ["Eike Thaden <eike.thaden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nc-dnsapi = "^0.1.5"
dnspython = "^2.3.0"
pyyaml = "^6.0"
netaddr = "^0.8.0"
netifaces = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
