[tool.poetry]
name = "openwrtdyndnscli"
version = "0.1.0"
description = "DynDNS Command-line Client for OpenWRT"
authors = ["Eike Thaden <eike.thaden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nc-dnsapi = {git = "https://github.com/nbuchwitz/nc_dnsapi.git", rev = "v0.1.6"}
dnspython = "^2.3.0"
pyyaml = "^6.0"
netaddr = "^0.8.0"
netifaces = "^0.11.0"
requests = "^2.28.2"
fritzconnection = "^1.12.0"
schema = "^0.7.5"
pdoc = { version = "^13.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.poetry.extras]
docs = ["pdoc"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
